# verenigingen

./: .bandit  .coveragerc  .eslintignore  .eslintrc.js  .eslintrc.json  .flake8  .gitignore  .mcp.json  .pre-commit-config.yaml  .pre-commit-hooks.yaml  .pylintrc  ANBI_TEST_IMPLEMENTATION_REPORT.md  ARCHITECTURE_SITEMAP.md  AUDIT_LOGGING_SOLUTION_SUMMARY.md  BASELINE_VERIFICATION_REPORT.md  CLEANUP_SUMMARY.md  CODE_DOCUMENTATION_PROGRESS.md  CODE_QUALITY_IMPROVEMENTS_SUMMARY.md  COMPREHENSIVE_FINAL_CODE_REVIEW.md  COMPREHENSIVE_TEST_SUITE_DESIGN.md  COMPREHENSIVE_VALIDATION_INVENTORY_VERIFIED.md  CORRECTED_CLEANUP_SUMMARY.md  CORRECTED_VALIDATION_INFRASTRUCTURE_ANALYSIS.md  CRITICAL_FLAKE8_ISSUES.md  CRITICAL_IMPROVEMENT_PLAN_ANALYSIS.md  CUSTOMER_MIGRATION_FIX_SUMMARY.md  DATABASE_FIELD_ISSUES_INVENTORY.md  DEPRECATED_FIELD_FIXES_COMPLETE.md  DOCTYPE_LOADING_FIX_REPORT.md  DUES_INVOICE_PAYMENT_TRACKING_ANALYSIS.md  DUES_SYSTEM_MIGRATION_INVENTORY.md  DUTCH_LANGUAGE_AUDIT_AND_FIXES.md  EBOEKHOUDEN_ACTIVE_CODE_ANALYSIS.md  EBOEKHOUDEN_CLEANUP_PLAN.md  EBOEKHOUDEN_ENHANCED_LOGGING.md  EBOEKHOUDEN_FILE_ANALYSIS.md  EBOEKHOUDEN_IMPLEMENTATION_SUMMARY.md  EBOEKHOUDEN_JS_FUNCTION_TRACE.md  EBOEKHOUDEN_MIGRATION_CONSOLIDATION_COMPLETE.md  EBOEKHOUDEN_MIGRATION_CONSOLIDATION_PLAN.md  (+212 more)
.claude/: settings.json
.claude/agents/: software-architecture-expert.md
.github/scripts/: install-dependencies.sh
.github/workflows/: ci.yml  code-validation.yml  deploy-to-press.yml  js-tests.yml  js-tests.yml.disabled  pylint.yml  quality-assurance.yml  ui-tests.yml  ui-tests.yml.disabled  validation-infrastructure-tests.yml
api/: check_member_schedules.py  debug_payment_history.py  simple_payment_history_check.py  test_incremental_update_debug.py  test_monitoring.py  test_nested_cleanup.py  test_phase3_service.py
archived_docs/: ACTIVE_CODE_LIST_2025_01.md  DEPLOYMENT_GUIDE.md  FINAL_MIGRATION_STATUS.md  MEMBERSHIP_DUES_SYSTEM_COMPREHENSIVE_PLAN.md  MEMBERSHIP_DUES_TESTING_GUIDE.md  MEMBER_JS_REFACTORING_SUMMARY.md  MIGRATION_COMPLETION_SUMMARY.md  PRODUCTION_DEPLOYMENT_CHECKLIST.md  REAL_WORLD_DUES_AMENDMENT_TESTING_SUMMARY.md  RECENT_UPDATES_2025_01.md  REORGANIZATION_COMPLETE.md
archived_removal/: debug_account_30000.py  debug_billing_transitions.py  debug_member_data.py  debug_sepa_week4.py  test_architectural_fix.py  test_calculate_totals.py  test_chapter_member_simple.py  test_date_filtering.py  test_dues_validation.py  test_event_driven_invoice.py  test_expense_workflow_complete.py  test_fee_tracking_fix.py  test_import_fixed.py  test_item_management.py  test_member_portal_fixes.py  test_migration_api.py  test_monitoring_edge_cases.py  test_monitoring_implementation.py  test_monitoring_performance.py  test_party_extraction.py  test_renamed_imports.py  test_report_page_loading.py  test_sepa_fixes.py  test_sepa_mandate_fields.py  test_simple_import.py  test_transaction_import.py
archived_unused/: README.md  debug_object_type_detection.py  debug_pattern2.py  debug_validation_pipeline.py  debug_validator_test.py  integrate_enhanced_payment.py
archived_unused/debug_scripts/: test_import_without_fallbacks.py
config/: production.env.template
cypress/: README-JAVASCRIPT-TESTING.md
docs/: ADMIN_GUIDE.md  API_DOCUMENTATION.md  BACKUP_RECOVERY_GUIDE.md  BULK_OPERATIONS_DEPLOYMENT.md  COST_CENTER_IMPLEMENTATION.md  CRITICAL_PERMISSIONS_AUDIT.md  DEPLOYMENT_GUIDE.md  DEVELOPER_QUICK_START.md  DEVELOPER_TESTING_GUIDE.md  DOCTYPE_PERMISSIONS_INVENTORY.json  DOCTYPE_PERMISSIONS_SUMMARY.md  DOCUMENTATION_CONSOLIDATION_LOG.md  DOCUMENTATION_UPDATE_2025.md  DOCUMENTATION_UPDATE_2025_JANUARY.md  EBOEKHOUDEN_INTEGRATION_COMPREHENSIVE.md  EMAIL_FIXTURES_GUIDE.md  E_BOEKHOUDEN_TRANSFORMATION_EXECUTIVE_SUMMARY.md  FAQ_TROUBLESHOOTING.md  FRAPPE_PERMISSIONS_SYSTEM.md  GETTING_STARTED.md  INSTALLATION.md  KASCOMMISSIE_SETUP.md  MEMBERSHIP_TYPE_FIELD_CLEANUP.md  MEMBER_PERMISSION_FIX_SUMMARY.md  MOLLIE_BACKEND_API_DOCUMENTATION.md  MOLLIE_INTEGRATION_USER_GUIDE.md  OPERATIONS_RUNBOOK.md  PHASE2_IMPLEMENTATION_SUMMARY.md  README.md  REST_API_LIMITATIONS.md  ROLE_PROFILES.md  SECURITY_CONFIGURATION_GUIDE.md  SECURITY_PERMISSION_FIX_REPORT.md  SEPA_DOUBLE_DEBITING_PREVENTION.md  TECHNICAL_ARCHITECTURE.md  TESTING_FRAMEWORK_2025.md  UPGRADE_GUIDE.md  USER_GUIDE_COST_CENTER_CREATION.md  VERENIGINGEN_APP_COMPREHENSIVE.md  VERENIGINGEN_PERMISSIONS_AUDIT.json  (+15 more)
examples/: scalability_testing_example.py
hooks/: before_request.py
monitoring/: alerts.yml  grafana-dashboard.json  prometheus-config.yml
schemas/: README.md
scripts/: FIELD_VALIDATION_README.md  README.md  __init__.py  add_section_break.py  analyze_eboekhouden_fields.py  check_email_template_status.py  check_payable_accounts.py  coverage_report.py  debug_css_issue.py  debug_mollie_api_detailed.py  deploy.sh  export_custom_fields_to_fixture.py  field_reference_mapper.py  field_rename_safety.py  fix_eboekhouden_import_issues.py  fix_eboekhouden_imports.py  fix_eboekhouden_workspace.py  fix_test_files_references.py  fix_unique_constraint.py  generate-contract-report.js  generate_contract_test_data.py  generate_test_database.py  health_check.py  install_pre_commit.sh  install_sepa_schemas.py  membership_dues_poc.py  performance_benchmark.py  pre_commit_field_validator.py  precise_field_scanner.py  remove_duplicate_fields.py  run-js-controller-tests.sh  run-js-tests.sh  setup_eboekhouden_workspace.py  setup_monitoring.py  test_auto_submit.py  test_chapter_history_fix.py  test_invoice_fix.py  test_mollie_donor_integration.py  update_field_descriptions.py  update_membership_type_references.py  (+5 more)
security_reports/: security_dashboard_20250729_115122.json
test-results/: jest-junit.xml
tests/: run-js-tests.js  setup.js  test_iban_validation_integration.py
verenigingen/: __init__.py  auth_hooks.py  boot.py  debug_api.py  debug_coverage.py  hooks.py  hooks.py.phase22_rollback_backup_1753804456  install_onboarding.py  modules.txt  optimization_report.md  patches.txt  permissions.py  session_cache_fix.py  test_cleanup_accounts.py  validations.py
(+3157 files in other folders)
