[project]
name = "verenigingen"
authors = [
    { name = "Foppe de Haan", email = "foppe@veganisme.org"}
]
description = "Comprehensive association management system for Dutch non-profit organizations with ERPNext integration, eBoekhouden accounting sync, SEPA direct debit, volunteer management, and ANBI compliance features."
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]
keywords = ["frappe", "erpnext", "association", "membership", "volunteer", "eboekhouden", "sepa", "dutch", "non-profit", "anbi"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business",
    "Topic :: Software Development :: Libraries :: Application Frameworks"
]
dependencies = [
    # "frappe~=15.0.0" # Installed and managed by bench.
    # Add any Python package dependencies here, e.g.:
    # "requests>=2.25.0",
    # "pandas>=1.3.0",
]

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

# These dependencies are only installed when developer mode is enabled
[tool.bench.dev-dependencies]
# package_name = "~=1.1.0"
