[project]
name = "verenigingen"
authors = [
    { name = "Foppe de Haan", email = "foppe@veganisme.org"}
]
description = "Comprehensive association management system for Dutch non-profit organizations with ERPNext integration, eBoekhouden accounting sync, SEPA direct debit, volunteer management, ANBI compliance features, and Mollie backend API integration."
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]
keywords = ["frappe", "erpnext", "association", "membership", "volunteer", "eboekhouden", "sepa", "dutch", "non-profit", "anbi", "mollie", "payments", "reconciliation"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business",
    "Topic :: Software Development :: Libraries :: Application Frameworks"
]
dependencies = [
    # "frappe~=15.0.0" # Installed and managed by bench.
    # Mollie Backend API dependencies
    "mollie-api-python>=3.6.0",
    "cryptography>=41.0.0",
    "requests>=2.31.0",
    "python-dateutil>=2.8.2",
]

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

# These dependencies are only installed when developer mode is enabled
[tool.bench.dev-dependencies]
# package_name = "~=1.1.0"

[tool.black]
line-length = 110
target-version = ['py310', 'py311']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | node_modules
  | migrations
  | patches
  | scripts
  | tests
  | debug_utils
  | dev_scripts
  | integration_tests
  | frontend_tests
)/
'''

[tool.isort]
profile = "black"
line_length = 110
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
skip_glob = ["*/migrations/*", "*/node_modules/*", "*/build/*", "*/dist/*", "*/scripts/*", "*/tests/*", "*/debug_utils/*", "*/dev_scripts/*", "*/integration_tests/*", "*/frontend_tests/*"]

[tool.flake8]
max-line-length = 120
extend-ignore = ["E203", "W503", "E501", "F401", "E722", "F821", "C901", "E225"]
exclude = [
    "migrations",
    "node_modules",
    ".git",
    ".venv",
    "build",
    "dist",
    "__pycache__",
    "scripts",
    "tests",
    "debug_utils",
    "dev_scripts",
    "integration_tests",
    "frontend_tests"
]
